--- a/Fitness-M/Представление/Абонемент/TicketsControl.resx
+++ b/Fitness-M/Представление/Абонемент/TicketsControl.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="clmClientNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmClientFio.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmClientPhone.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="clmNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -135,6 +144,9 @@
   <metadata name="clmAbPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="clmDebt.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="clmClientNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -142,6 +154,27 @@
     <value>True</value>
   </metadata>
   <metadata name="clmClientPhone.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmNumber.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDateFinish.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmBalance.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmAbCountBalls.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmAbCountVisits.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmAbPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDebt.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="clmId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -165,4 +198,104 @@
   <metadata name="clmInactive.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="clmId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmPrice.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmPeriod.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmCountBalls.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmVisits.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmOnlyGroup.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmInactive.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADy
+        DwAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABgAMAASADAAEBAQABCAYAARAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/yYAFv9mAAH/AfQB8QHw
+        AbwFBwrvBQcBvAHwAfEB9AH/QwAB/wJvAUYBkxsAAfQB8wHyAbwB8QHwAbwOBwG8AvAB8QHyAfMB9A4A
+        AfQG8gH/LgABbwGUAZoBlAFGAbwdAAHqAe0B/wEAD/8TAAH/Ae0GLgHuLQAB9AFvAZQBFgHjARcBRhEA
+        ApMKAAHsARABDgHtAf8hAAH/AVABNAQ1ATQBHC0AAZMCFgHjARcBRwElAf8PAAH0ASABRgoAAe8BDwEO
+        AQAB6wHzAf8fAAH/AXIFVwFWAZgtAAJvAeMBFwFHASYBJQH1DwABbwEgAZMKAAEHAgABcwHDAhoB8wH/
+        HQAB/wGXBZ8BfgGYLQABkwFGARcBRgElASYBJQH/DgABGgIgAf8KAAHyAesFGgIbAfQcAAH/AVYFOgE5
+        AZgtAAH1AkYEIAGTDQAB/wFGASYBbwsAAfQCmgUaARsBmgEaGwAB/wFWAToFOQGYLgABRgUgAekB9AwA
+        AW8CJQEaCwAB/wKaBRoBegJZAfQaAAH/AVYBOQQ1ATkBmC4AAfAGIAFvCwABvAElASYBRg0AA5oCGgGa
+        A3oCWRoAAf8BVgE5BTUBmC8AAW8GIAEHCQAB9AElASYBJQHyDQADmgEaAZoCWQJ6AlkBmhkAAf8BVgY1
+        AZgvAAH/AUUFIAHpAfQHAAH/AUUCJgFvDgABGgKaAVkCegJZAnoCWQEbDgAK/wH0AVAFVgE1AZgK/yYA
+        AfQB6QUgAUUGAAH/AUUCJgElAfQOAAEaAXoBWQExAnoDWQF6A1kB/w0AAfMBcglQAS4GVgFPAXIIUAFy
+        AfQmAAEaBiABkwUAAW4BJQEmASUBkw8AAf8BegJZATECegFZAVIBegNZAXoNAAHuBS4GNAZWBjQFLgHx
+        JwABvAYgAbwCAAH/AW8BJQImAUURAAEbAXoBWQFSAVkBegJZAVIBegJZAVgBGgwAAe4CLgE0CDUGVgc1
+        AjQCLgHxKAABvAUgAekB8wH/AUUCIAEmASAB8xIAAZoBegFZATEBWQF6AVkBUgFZAXoCWQFSAfYLAAHu
+        AVYJeAdWBXgElwFWAVUB8SkAARoB6QQgAekBRQQgAZMTAAH/AXoCWQExAXoCWQExBFkBWAsAAe4BVgF4
+        ApcGeAdWCpcBTwHxKgAB8wHpCCABTBUAAfMBegJZAVgBegFZAjEDWQExARoKAAHuAVUMlwxWAlUBTwHx
+        KwAB/wFFBiABRQH1FgABGgF6AVkBWANZATEBWANZATEB9AkAAe4BVQGYCXgGlwN4B5cBTwHxKwAB/wFv
+        BiAB7hcAAf8CegFZAVICWQIxA1kBMQFYCQAB8wFPAZcBcgeXAVUGlwFQCJcBUAFPAfQqAAEaAekHIAHp
+        AfIXAAH0AnoBWQFYAVkBUgIxAlkBMgFSAbwJAAr/AVAFlwFWAe0K/ykAAfQBbwogAekBGhcAARoBegRZ
+        AzEBWQGZAbwC8xEAAf8BUAaXARwxAAH/AZMBRgImASUEIAGTAUYEIAGTFwABmgF6A1kCMQFSAbwB8wHy
+        AUUBHwH/EAAB/wFQAZcBeASXAZgvAAH/Ae4BRgNHAiYBJQEmASABGgEAAf8BbwIgAkYBbwH/FQAB9gJ6
+        AlkBMQF6AfQB9QGTAQEBHwHpAW8QAAH/AVABlwF4ApcBeAGXAZguAAHwAm8BFgHjAU0CRwImASUB8AQA
+        AbwB6QRGAf8VAAEbAnoBWQEaAvMBRQEBAR8D6QH1DwAB/wFQAZcBmAJ4AZgBlwGYLAAB8gFvAZMClAF1
+        AuMBTQFHASYBRgHzBgAB/wFvAUYCFwFGAe4VAAGaAZkB8AHxAQcCAQEfA+kBRgH/DwAB/wFQAZcEmAGX
+        AZgsAAGTAr0DlAEWAuMBRwFGAfUJAAEaAkYBFgJvAfQTAAH0ArwBbgEBAR8E6QFvAfUQAAH/AVABlwSY
+        AZcBmCwAAZMBGgK9A5QBFgFGAZMMAAH/AZMBRgEWAZQBbwGTAfUSAAHxAekBAQTpAUYBBxIAAf8BUAGY
+        AQgDmAF4AZIsAAH0ApMCvQGUAm8B9A8AAf8BkwFGAW8BkwJvAQcRAAFvAR8D6QFGAfQTAAH/AXIBlwF4
+        BJcBBy0AAf8BBwGTAZQBbwEHAf8SAAH0AZMCbwFFAW8RAAH/AUYC6QGTFgAB8QaYAfReAAH1AZMB80sA
+        AUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEBBgABAhYAA/8BAAT/AfgCAAEfBP8EAAT/AYACAAEB
+        BP8EAAHBA/8BwAIAAQMB/wHwAQ8B/wQAAcAD/wH4AYABAAL/AeABDwH/BAABgAL/AZ8B+AE/A/8B4AEP
+        Af8EAAGAAX8B/wEfAfgBDwP/AeABDwH/BAABgAF/Af8BHwH4AQMD/wHgAQ8B/wQAAYABfwH+AR8B+AEB
+        A/8B4AEPAf8EAAGAAX8B/AE/AfgBAAP/AeABDwH/BAABwAE/AfwBPwH4AQABfwL/AeABDwH/BAABwAE/
+        AfgBfwH8AQABfwL/AeABDwH/BAAB4AEfAfABfwH8AQABPwL/AeABDwH/BAAB4AEPAeAB/wH8AQABHwH/
+        AYACAAEDBAAB8AEPAcAB/wH8AQABDwH/AYACAAEBBAAB+AEHAcEB/wH8AQABDwH/AYACAAEBBAAB/AID
+        Af8B/gEAAQcB/wGAAgABAQQAAf4BAAEDAv8BAAEDAf8BgAIAAQEEAAH/AQABBwL/AQABAwH/AYACAAEB
+        BAAB/wGAAQ8C/wGAAQEB/wGAAgABAQQAAf8BwAEPAv8BwAEAAf8BgAIAAQEEAAH/AcABHwL/AcABAAH/
+        AYACAAEBBAAB/wGAAQ8C/wHgAQABfwHAAgABAwQAAf4BAAEHAv8B8AEAAT8B/wHgAQ8B/wQAAfgBAAED
+        Av8B+AEAAR8B/wHgAQ8B/wQAAeABAQEAAv8B+AEAAR8B/wHgAQ8B/wQAAcABAwHAAX8B/wH8AQABDwH/
+        AeABDwH/BQABBwHgAT8B/wH+AQABDwH/AeABDwH/BQABDwH4AQ8B/wH+AQABHwH/AeABDwH/BQABPwH8
+        AQMC/wEAAX8B/wHgAQ8B/wUAAX8B/wEAAv8BgAL/AeABDwH/BAABgAL/AcAC/wGDAv8B8AEPAf8EAAb/
+        AccF/wQACw==
+</value>
+  </data>
 </root>
