--- a/Fitness-M/Представление/Тренажеры/График/FitnessEquipmentSchedule.resx
+++ b/Fitness-M/Представление/Тренажеры/График/FitnessEquipmentSchedule.resx
@@ -139,9 +139,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAU
-        CgAAAk1TRnQBSQFMAwEBAAEIAQABCAEAASABAAEgAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
-        AYADAAEgAwABAQEAAQgGAAEQGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAC
+        CAAAAk1TRnQBSQFMAwEBAAEIAQABCAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
         AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
@@ -168,37 +168,13 @@
         AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
         AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
         ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8GAAH/AfIS8AHxAf9qAAH/
-        AQcG8AO8BQcE7wGSAf9rAAEHCf8C9ALzAfIC8QLwAQdpAAH/AfIBBwGSAfMH/wL0AvMC8gPxAQcB7QEH
-        AfEB9AH/YwAB/wEHAe0BkgIHAbwJ/wL0AvMC8gHxAgcB7wHtAewBBwH/YgABvAHvAQcB7wHrAW0B6wHz
-        Af8H9ALzAvIC8QG8AW0B6wH4Ae8BBwGSAQdhAAH/AfcCBwH3AwAB7AvvA/cB7AIAAQ4B7wIHAe0B/2AA
-        AfMB7wIHAfcVAAEPAwcBkgHzYAABvAQHBG0O6gNtAfgCBwG8Ae8B8GAAAQcB8AO8FfEB8AO8AgdgAAEH
-        HvABB2AAAQcK8QryCvEBB2AAAQcE8hbzA/IB8AEHYAABvAHzHPQBvAHwYAAB8gHwAv8B9Bn/Ae8B9GAA
-        Af8B7wH/AZgBVQGYGP8B9wH/YQABBwH/AQgBlwGYF/8B8wG8YgAB9AEHAfQY/wHzAe8B/2MAAf8B8QEH
-        AbwB9Av/BvQB8wHyAgcB8QH/ZwAB9AHvCP8C9ALzAvIB8QHwArwBkgH/awABBwH/AfEG8AK8BAcC7wEH
-        AfABB2wAAfMBBwFtA+0H7AP4AeoB7AEHAfRtAAH0AQcE/wL0AvMC8gPxAe8B8QH0bwABvAL/AvQC8wLy
-        AvED8AH3AfRwAAG8A/8C9ALzAvIC8QHwAfEB9wH0cAABBwT/AvQC8wLyAvEB8gH3AfRwAAEHBf8C9ALz
-        AvIB8QHyAfcB9HAAAQcG/wL0AvMC8gHzAfcB9HAAAQcH/wL0AvMB8gHzAfcB9HAAAQcI/wL0AvMB9AH3
-        AfRwAAEHC/8B9AH/AfcB9HAAAQcN7wGSAf9oAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYA
-        AQIWAAP/AQAB+AIAAR8MAAH4AgABHwwAAfwCAAE/DAAB4AIAAQMMAAGAAgABAQwAAYACAAEBrAABgAIA
-        AQEMAAGAAgABAQwAAcACAAEDDAAB+AIAAR8MAAH8AgABPwwAAfwCAAE/DAAB/gIAAX8MAAH/AgAB/wwA
-        Af8CAAH/DAAB/wIAAf8MAAH/AgAB/wwAAf8CAAH/DAAB/wIAAf8MAAH/AgAB/wwAAf8CAAH/DAAB/wIA
-        Af8MAAs=
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8EAAEHAvACvAMHAu8B/zQA
+        AfIBkgT/AfQB8wHyAfECBwH0MgAC7wFtAfME9AHzAfIB8QFtAfgCBzAAAfMBBwH3CgABDwEHAZIwAAEH
+        ArwK8QHwAbwBBzAAAQcF8QXyBfEwAAG8DvQBvDAAAv8BVQz/AfcxAAEHDP8B8wH/MwAB7wT/AfQB8wHy
+        AfABvAH/NQAB8wFtAe0E7AH4AeoBBzcAAbwB/wH0AfMB8gHxAfAB9zgAAQcC/wH0AfMB8gHxAfc4AAEH
+        A/8B9AHzAfIB9zgAAQcE/wH0AfMB9zgAAQcG7wGSNAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEAAeABAwYAAcABAQYAAYAvAAGABwAB4AEDBgAB4AEHBgAB8AEPBgAB8AEPBgAB8AEP
+        BgAB8AEPBgAB8AEPBgAL
 </value>
   </data>
-  <metadata name="clmFqTitle.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmRunningTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmCountBalls.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmFreeTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmDateToFreeTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
