Добавлено контесктное меню Долг

--- a/Fitness-M/Представление/Клиенты/ClientsControl.resx
+++ b/Fitness-M/Представление/Клиенты/ClientsControl.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB4
-        EwAAAk1TRnQBSQFMAgEBCwEAARgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABk
+        EwAAAk1TRnQBSQFMAgEBCwEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -158,57 +158,56 @@
         ASoDSwNSAwAL/wHzEgAB8Qz0AfADAAFSAXoBmgEaApoBeQF0AlICIwFLAVIDAAv/AfMSAAHxDPQB8AMA
         ARsCegJSAUsBKgFLAXQBegFLAXQCUgMAC/8B8xIAAfEM9AHwAwABegF5AVIDSwF0A1IBIwEqAUsBUgMA
         C/8B8xIAAfAM9AG8AQABmQF6AZoBegFTAUwCKgFMAVIBegFSAUwBdAJSAwAL/wHzEgAB8Az0AbwBAAF0
-        AZoCoAR6AVkBSwFSASoBSwEqAUsBUgMAC/8B8xIAAfAF9Af1AbwBAAFSA6ABegGgAZoBegGgA1IBeQF0
-        AlIDAAv/AfMSAAG8A/UJ/wG8AgABGgFSBHoBeQJSAUwBUgFLASoBSwFSAwAL/wHzEgABvAz/AbwIAAFZ
-        AZoBGgKaAXkBdAJSAwAL/wHzEgABvAzvAQcIAAN6AlIBSwEqAUsBUgMAC/8B8xIAAfMCvArwAQcIAAF6
-        AZoBGgKaAXkBdAJSAwAI/wHzAfEBvAH/KAABmgKgApoBoAN6AwAJ/wHxAfQpAAFSAXoBoAGaAnoBmgHD
-        AVIDAAf/AfMB8gHzAf8rAAHzAxoB8wUACO8B9AH/HAAC/wkAAf8B9AHyAvAB8gH0BgAD/wHzAfIB8AK8
-        AfAB8gHzAfQD/wUAAf8BkgHwAbwB+QFGAgABRgFBAf8GAAP0AfIB8AH0BwAB9ALuAfAB8gHzAfIB8QG8
-        AfQGAAH/AQcB7QGSAu8B9wHtAu8HAALvAfMB9AFHByADAAL0AfID8AEHAbQBvAH0BQAB8wEHAe4B8ALy
-        AfQB/wH0AfIBBwHzBQAB/wHwAe8BBwG8AfABBwHvAQcB7wUAAf8B8gG8AfEB8gHzAfUGIAMAAfQB8wK7
-        AbUFtAEHAfQDAAH0AQcDvAHyAfMB9AH1AfQB/wH0AQcB9AQAAf8B8gIHAbwB8AG8AQcB8AEHBQAB8QK8
-        AfAB8QHzAfQB9QEgAh8BIAHxAwAB8wW7BLQBtQHzAgAB/wEHAe4DvAHwAfIB8wH0AfUC/wHyAQcEAAH/
-        AfICBwG8AfABvAEHAfABBwQAAe8B8AO8AfAB8gHzAR4EIAEeAgAB/we7A7UB8wH0AgAB9AHuBLwB8AHx
-        AfIB8wH0AfUC9AEHAfQDAAH/AfIC7wG8AfABBwHvAbwB7wQAAfcC8AO8AfEBDgIgAUEB+QIgAQ4BAAH/
-        AQkCuwG8A/8B8QG7AvQDAAK8AvAFvAHyAfMD9ALxAwAB/wHyAu8BBwHwAQcB7wHwAe8DAAH0AbwB8QHw
-        A7wB8AEAAuMC9ALjAgAF/wMAAfMB/wUAAQcBvAHwAfEB8AG8AQcC7wHuArwB8AHzAfIBvAMAAf8B8gIH
-        AbwB8AEHAe8B8QHvAwAB7wG8AvIB8AK8Ae8B7AFGAgcB7gHzAekB7wQAAvQB8AH/AgAB9AMHAfQBAAEH
-        AbwB8ALyAfAB7gEHAe8B7gG8AvAB8QHwAbwDAAH/Ae8BvAXzAe8B8QMAAgcE8gK8Ae8BvAHwAfEC8gHz
-        Ae8DAAH0AfMBuwG1A/IBBwO0AfMBAAHuAbwF8gG8Ae4CvAPwAbwB8QQAAQcB8gUAAe8B9AMAAf8BBwby
-        BLwC8AHyAewCAAH0AfIGuwG1ArQBuwH0AQAB8wEHAfEE8gXwArwBBwH0BAABBwHyBQAB7wH0BAAB9wPz
-        A/IBvAHxBPAB9wH/AgAB9AEJB7sBtQG7AfMB9AEAAf8CBwTyAfABvAPwAbwCBwH/BAAB8AHvBQAB7wH/
-        BAAB8AEHAfME8gG8AfED8AG8AfcDAAL0AQkGuwEIAfMB9AMAAfMB7gHwA/IB8AG8AvACvAEHAfQFAAH/
-        AQcB8wMAAe8BBwYAAfQBBwHzA/IB7gTwAfEFAAL0AQkBCAX0BgAB8wIHAfEB8gK8AfABvAHuAQcB8wcA
-        AfMB8gLtAQcB8QH/BwAB9AEHAfMC8gHwAvEB8AHxAf8HAAH/AfEB9AsAAfMEBwK8AgcB9AkAAf8B8gG8
-        AfMKAAHwAfcEBwHvAQcYAAH/AfMBvAIHAbwB8wH/GgAB/wHvAfcB9AkAAvQMAAHvAfAB8gHzAfQB/wH0
-        DgAB/wH0AZEFiwG0AfMDAAL0DQAB9AGUAW8B9AcAAfQDAAH0AZkBGwH0AvMB9AH/AfQB/wsAAfEDiwFs
-        Ai4BSQGLAbUCAAH0AZQBbwH0BwAB9AQAAZMBFgFHAfMGAAH0AXQEAAKZARsB9AH/A/QB/wL0CQABrgOL
-        AU8BVgEIAS4BbAHxAgABkwEWAUcB8wYAAfQBdAQAAZMBRgElAfIFAAH0AW8B8gQAARoBmgFYAfQBAAL0
-        Bv8HAAGQA4sBTwFXAQgBNQFsAfQCAAGTAUYBJQHyBQAB9AFvAfIEAAH0AiABRgH0BAABGgFMAfQEAAH0
-        AnoBmgQAAfQF/wMAAfQBCAGYBYsBUAFWAU8BiwH/AgAB9AIgAUYB9AQAARoBTAH0BQABkwIgAe4B/wIA
-        AfMBJgEHBgABmQJ6AfQFAAP0AgAB/wGYAy4BbAOLAa0DiwG0BAABkwIgAe4B/wIAAfMBJgEHBwABbwIg
-        AfIBAAH0AUcBdAH0BgAB9AF5AnoB/wkAAf8BUAMvAVADiwGtAosBrQHzBQABbwIgAfIBAAH0AUcBdAH0
-        CAABbwEgAUYB/wEgASUB9AgAARoCoAHzCgABUAQ1AXgBtAFzARwBrgGzAfQHAAFvASABRgH/ASABJQH0
-        CQAB/wGTAyABGgH/CAAB/wGZAaABegoAAXgBVgFQAlYB/wQcAfQIAAH/AZMDIAEaAf8JAAH0AZMDIAH0
-        CgAB8wF6AaABmgkAAfQCHAFzAfMB/wG8Ae8BHAHuCQAB9AGTAyAB9AgAAfQBGgEXASUBIAGUASABRgHx
-        CQAB/wEaAcMBHAH/CAAB9AEHARwB8AEAAfMBvAEHAe0BbQHwBgAB9AEaARcBJQEgAZQBIAFGAfEGAAHy
-        AZQB4wFHASYBlAEAAfQBbwFGARoB9AgAAfQCBwGYAf8HAAHzAQcB7QFtAf8B8AEHAZIBbQERAe0FAAHy
-        AZQB4wFHASYBlAEAAfQBbwFGARoB9AMAAf8BvQGUARYB4wGTBAABGgFvAZQB8wH0BwABCAEVAe0B8wcA
-        AbwB6gIVAfMB6gEVAUMBEQFDAZIEAAH/Ab0BlAEWAeMBkwQAARoBbwGUAfMB9AIAARoBvQEaAfQHAAEa
-        Ab0B9AcAAf8BBwHvAZkB9AYAAfQB7wHrAQcB/wHxAeoCFQETAfIFAAEaAb0BGgH0BwABGgG9AfQYAAH/
-        AUUBbwH0DAAB/wLwAfRUAAFCAU0BPgcAAT4DAAEoAwABQAMAATADAAEBAQABAQUAAYABARYAA/8BAAL/
-        AcABHwHgAQECAAL/AcABAAHgAQECAAGAAQEBwAEAAeABAQIAAYABAQHAAQAB4AEBAgABgAEBAcABAAHg
-        AQECAAGAAQEBwAEAAeABAQIAAYABAQIAAeABAQIAAYABAQIAAeABAQIAAYABAQIAAeABAQIAAYABAQGA
-        AQAB4AEBAgABgAEBAf4BAAHgAQECAAGAAQEB/gEAAeABAQIAAYABAQH+AQAB4AEBAgAC/wH+AQAB4AED
-        AgAC/wH+AQAB4AEDAgAD/wGDAeABBwIAAf8BnwHwAR8BgAEAAfgBGAH8AQ8B4AEHAeABBwHwAQAB4AEH
-        AcABAwHgAQcBwAEBAcABAwGAAQEB4AEHAcABAQHAAQMBAAEBAeABBwGAAQEBgAEDAgAB4AEHAYABAAGA
-        AQcCAAHgAQcCAAGDAZ8CAAHgAQcCAAHwAcECAAHgAQcCAAHgAQECAAHzAecCAAHAAQECAAHzAecBgAEA
-        AcABAQIAAfMB5wGAAQEBwAEDAYABAQHxAc8BwAEDAeABDwHAAQMB+AEPAeABAwH4Af8B4AEHAfwBPwHw
-        AQ8C/wHwAQ8C/wH8AT8B5wH/AYAB/wH8AQAB5wH/AcMB+wGAAR8B/AEAAcMB+wHDAfMBwAEHAfwBAAHD
-        AfMBwwHjAcIBAQH8AQABwwHjAcEB4wHDAcAB4AEAAcEB4wHgAccB4QHxAYABAQHgAccB8AGHAeAB/wGA
-        AQEB8AGHAfgBDwHwAf8BwAEDAfgBDwH4AQ8B8AH/AcABBwH4AQ8B+AEfAfgBfwHAAQ8B+AEfAeABDwH4
-        AT8BwgEHAeABDwHAAYMB/AEfAcABBwHAAYMBgQHgAf4BHwHAAQcBgQHgAcMB+AH+AQ8BwAEHAcMB+AP/
-        AQ8B/wEPCv8L
+        AZoCoAR6AVkBSwFSASoBSwEqAUsBUgMAC/8B8xIAAfAF9Af/AbwBAAFSA6ABegGgAZoBegGgA1IBeQF0
+        AlIDAAv/AfMSAAG8DP8BvAIAARoBUgR6AXkCUgFMAVIBSwEqAUsBUgMAC/8B8xIAAbwM/wG8CAABWQGa
+        ARoCmgF5AXQCUgMAC/8B8xIAAbwM7wEHCAADegJSAUsBKgFLAVIDAAv/AfMSAAHzArwK8AEHCAABegGa
+        ARoCmgF5AXQCUgMACP8B8wHxAbwB/ygAAZoCoAKaAaADegMACf8B8QH0KQABUgF6AaABmgJ6AZoBwwFS
+        AwAH/wHzAfIB8wH/KwAB8wMaAfMFAAjvAfQB/xwAAv8JAAH/AfQB8gLwAfIB9AYAA/8B8wHyAfACvAHw
+        AfIB8wH0A/8FAAH/AZIB8AG8AfkBRgIAAUYBQQH/BgAD9AHyAfAB9AcAAfQCvAHwAfIB8wHyAfEBvAH0
+        BgAB/wEHAe0BkgLvAfcB7QLvBwAC7wHzAfQBRwcgAwAC9AHyA/ABBwG0AbwB9AUAAfMBBwG8AfAC8gH0
+        Af8B9AHyAQcB8wUAAf8B8AHvAQcBvAHwAQcB7wEHAe8FAAH/AfIBvAHxAfIB8wH/BiADAAH0AfMCuwG1
+        BbQBBwH0AwAB9AEHA7wB8gHzAfQB/wH0Af8B9AEHAfQEAAH/AfICBwG8AfABvAEHAfABBwUAAfECvAHw
+        AfEB8wH0Af8BIAIfASAB8QMAAfMFuwS0AbUB8wIAAf8BBwS8AfAB8gHzAfQD/wHyAQcEAAH/AfICBwG8
+        AfABvAEHAfABBwQAAe8B8AO8AfAB8gHzAR4EIAEeAgAB/we7A7UB8wH0AgAB9AW8AfAB8QHyAfMB9AH/
+        AvQBBwH0AwAB/wHyAu8BvAHwAQcB7wG8Ae8EAAH3AvADvAHxAQ4CIAFBAfkCIAEOAQAB/wEJArsBvAP/
+        AfEBuwL0AwACvALwBbwB8gHzA/QC8QMAAf8B8gLvAQcB8AEHAe8B8AHvAwAB9AG8AfEB8AO8AfABAALj
+        AvQC4wIABf8DAAHzAf8FAAEHAbwB8AHxAfABvAEHAu8DvAHwAfMB8gG8AwAB/wHyAgcBvAHwAQcB7wHx
+        Ae8DAAHvAbwC8gHwArwB7wHsAUYCBwG8AfMB6QHvBAAC9AHwAf8CAAH0AwcB9AEAAQcBvAHwAvIB8AG8
+        AQcB7wK8AvAB8QHwAbwDAAH/Ae8BvAXzAe8B8QMAAgcE8gK8Ae8BvAHwAfEC8gHzAe8DAAH0AfMBuwG1
+        A/IBBwO0AfMBAAK8BfIEvAPwAbwB8QQAAQcB8gUAAe8B9AMAAf8BBwbyBLwC8AHyAewCAAH0AfIGuwG1
+        ArQBuwH0AQAB8wEHAfEE8gXwArwBBwH0BAABBwHyBQAB7wH0BAAB9wPzA/IBvAHxBPAB9wH/AgAB9AEJ
+        B7sBtQG7AfMB9AEAAf8CBwTyAfABvAPwAbwCBwH/BAAB8AHvBQAB7wH/BAAB8AEHAfME8gG8AfED8AG8
+        AfcDAAL0AQkGuwEIAfMB9AMAAfMBvAHwA/IB8AG8AvACvAEHAfQFAAH/AQcB8wMAAe8BBwYAAfQBBwHz
+        A/IBvATwAfEFAAL0AQkBCAX0BgAB8wIHAfEB8gK8AfACvAEHAfMHAAHzAfIC7QEHAfEB/wcAAfQBBwHz
+        AvIB8ALxAfAB8QH/BwAB/wHxAfQLAAHzBAcCvAIHAfQJAAH/AfIBvAHzCgAB8AH3BAcB7wEHGAAB/wHz
+        AbwCBwG8AfMB/xoAAf8B7wH3AfQJAAL0DAAB7wHwAfIB8wH0Af8B9A4AAf8B9AGRBYsBtAHzAwAC9A0A
+        AfQBlAFvAfQHAAH0AwAB9AGZARsB9ALzAfQB/wH0Af8LAAHxA4sBbAIuAUkBiwG1AgAB9AGUAW8B9AcA
+        AfQEAAGTARYBRwHzBgAB9AF0BAACmQEbAfQB/wP0Af8C9AkAAa4DiwFPAVYBCAEuAWwB8QIAAZMBFgFH
+        AfMGAAH0AXQEAAGTAUYBJQHyBQAB9AFvAfIEAAEaAZoBWAH0AQAC9Ab/BwABkAOLAU8BVwEIATUBbAH0
+        AgABkwFGASUB8gUAAfQBbwHyBAAB9AIgAUYB9AQAARoBTAH0BAAB9AJ6AZoEAAH0Bf8DAAH0AQgBmAWL
+        AVABVgFPAYsB/wIAAfQCIAFGAfQEAAEaAUwB9AUAAZMCIAG8Af8CAAHzASYBBwYAAZkCegH0BQAD9AIA
+        Af8BmAMuAWwDiwGtA4sBtAQAAZMCIAG8Af8CAAHzASYBBwcAAW8CIAHyAQAB9AFHAXQB9AYAAfQBeQJ6
+        Af8JAAH/AVADLwFQA4sBrQKLAa0B8wUAAW8CIAHyAQAB9AFHAXQB9AgAAW8BIAFGAf8BIAElAfQIAAEa
+        AqAB8woAAVAENQF4AbQBcwEcAa4BswH0BwABbwEgAUYB/wEgASUB9AkAAf8BkwMgARoB/wgAAf8BmQGg
+        AXoKAAF4AVYBUAJWAf8EHAH0CAAB/wGTAyABGgH/CQAB9AGTAyAB9AoAAfMBegGgAZoJAAH0AhwBcwHz
+        Af8BvAHvARwBvAkAAfQBkwMgAfQIAAH0ARoBFwElASABlAEgAUYB8QkAAf8BGgHDARwB/wgAAfQBBwEc
+        AfABAAHzAbwBBwHtAW0B8AYAAfQBGgEXASUBIAGUASABRgHxBgAB8gGUAeMBRwEmAZQBAAH0AW8BRgEa
+        AfQIAAH0AgcBmAH/BwAB8wEHAe0BbQH/AfABBwGSAW0BEQHtBQAB8gGUAeMBRwEmAZQBAAH0AW8BRgEa
+        AfQDAAH/Ab0BlAEWAeMBkwQAARoBbwGUAfMB9AcAAQgBFQHtAfMHAAG8AeoCFQHzAeoBFQFDAREBQwGS
+        BAAB/wG9AZQBFgHjAZMEAAEaAW8BlAHzAfQCAAEaAb0BGgH0BwABGgG9AfQHAAH/AQcB7wGZAfQGAAH0
+        Ae8B6wEHAf8B8QHqAhUBEwHyBQABGgG9ARoB9AcAARoBvQH0GAAB/wFFAW8B9AwAAf8C8AH0VAABQgFN
+        AT4HAAE+AwABKAMAAUADAAEwAwABAQEAAQEFAAGAAQEWAAP/AQAC/wHAAR8B4AEBAgAC/wHAAQAB4AEB
+        AgABgAEBAcABAAHgAQECAAGAAQEBwAEAAeABAQIAAYABAQHAAQAB4AEBAgABgAEBAcABAAHgAQECAAGA
+        AQECAAHgAQECAAGAAQECAAHgAQECAAGAAQECAAHgAQECAAGAAQEBgAEAAeABAQIAAYABAQH+AQAB4AEB
+        AgABgAEBAf4BAAHgAQECAAGAAQEB/gEAAeABAQIAAv8B/gEAAeABAwIAAv8B/gEAAeABAwIAA/8BgwHg
+        AQcCAAH/AZ8B8AEfAYABAAH4ARgB/AEPAeABBwHgAQcB8AEAAeABBwHAAQMB4AEHAcABAQHAAQMBgAEB
+        AeABBwHAAQEBwAEDAQABAQHgAQcBgAEBAYABAwIAAeABBwGAAQABgAEHAgAB4AEHAgABgwGfAgAB4AEH
+        AgAB8AHBAgAB4AEHAgAB4AEBAgAB8wHnAgABwAEBAgAB8wHnAYABAAHAAQECAAHzAecBgAEBAcABAwGA
+        AQEB8QHPAcABAwHgAQ8BwAEDAfgBDwHgAQMB+AH/AeABBwH8AT8B8AEPAv8B8AEPAv8B/AE/AecB/wGA
+        Af8B/AEAAecB/wHDAfsBgAEfAfwBAAHDAfsBwwHzAcABBwH8AQABwwHzAcMB4wHCAQEB/AEAAcMB4wHB
+        AeMBwwHAAeABAAHBAeMB4AHHAeEB8QGAAQEB4AHHAfABhwHgAf8BgAEBAfABhwH4AQ8B8AH/AcABAwH4
+        AQ8B+AEPAfAB/wHAAQcB+AEPAfgBHwH4AX8BwAEPAfgBHwHgAQ8B+AE/AcIBBwHgAQ8BwAGDAfwBHwHA
+        AQcBwAGDAYEB4AH+AR8BwAEHAYEB4AHDAfgB/gEPAcABBwHDAfgD/wEPAf8BDwr/Cw==
 </value>
   </data>
   <metadata name="Id.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -244,6 +243,24 @@
   <metadata name="contextMenuVisit.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
+  <metadata name="clmId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDateFinish.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmBalance.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmDebt.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="clmPayBefore.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="contextMenuTicket.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>480, 17</value>
+  </metadata>
   <metadata name="clmVisitId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -260,36 +277,6 @@
     <value>True</value>
   </metadata>
   <metadata name="clmIsDisabled.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmDateFinish.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmBalance.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmDebt.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmPayBefore.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmId.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmDateFinish.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmBalance.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmDebt.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="clmPayBefore.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
